# tabterminal

./: .gitignore  README.md  pyproject.toml
tabterminal/: __init__.py  __main__.py  ai_predictor.py  completer.py  config.py  history.py  shell.py
tests/: __init__.py  test_ai_predictor.py  test_completer.py  test_config.py  test_history.py  test_shell.py
